--- a/config/web_save_conf.yaml
+++ b/config/web_save_conf.yaml
@@ -6,9 +6,9 @@ beanstalkc:
     queue_start_name: 'WEB_SAVE_START'
     queue_result_name: 'WEB_SAVE_RESULT'
 mysql:
-    mysql_host: 172.31.137.214
-    mysql_db: PhishingSparkTest
+    mysql_host: 127.0.0.1
+    mysql_db: test
     mysql_user: root
-    mysql_password: inet_mysql
+    mysql_password: zxy
 web_save:
     pool_num: 10  # 线程池数量
